[package]
name = "test-cert-gen"
version = "0.1.0-pre"
authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
description = "Utility to generate certificates for tests (e. g. for TLS)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
